SPEAKEASY-38: Fix notification messages not appearing on long page
* Tweak the messages to work more like growl so always on top
* Add custom log4j config for refapp
* Fix IDE file tree not showing some directories
* Fix test that was actually written wrong

--- a/src/main/resources/modules/speakeasy/user/user.css
+++ b/src/main/resources/modules/speakeasy/user/user.css
@@ -5,8 +5,8 @@
     margin-top: 0 !important;
     margin-left: 0 !important;
     position: fixed;
-    width: 90%;
-    left: 5%;
+    width: 50%;
+    right: 5%;
     top: 5%;
 }
 
